Fixes layout bugs of faux wrappers (for catalog).

--- a/themes/wwwevergreen/css/src/smacss/_layout.scss
+++ b/themes/wwwevergreen/css/src/smacss/_layout.scss
@@ -360,8 +360,25 @@ body > div + header,  // This is hacky. Use .header-nav-wrapper instead. Delete 
  *
  * For main-content and sidebar inside an index-wrapper, e.g., used
  * in the catalog. Use sparingly!
+ *
+ * #faux-content-wrapper          #faux-sidebar-wrapper
+ * +------------------------------+---------------------+
+ * |                              | .faux-sidebar       |
+ * | Lorem ipsum ipsum dolor sit  | +-------------------+
+ * | amet olim ut gravis si vero. | | Pagus quidem      |
+ * | Facilisis tation qui nostrud | | loquor duis       |
+ * | minim te importunus.         | | tation feugait    |
+ * |                              | | paulatim paratus  |
+ * | Sino nonummy modo lucidus    | | nobis genitus.    |
+ * | molior usitas secundum jugis | | Loquor bis loquor |
+ * | at multo. Molior quia nobis  | | iriure a ex.      |
+ * | duis camur vel virtus. Autem | | Pneum saluto at.  |
+ * | consequat similis autem.     | +-------------------+
+ * |                              |                     |
+ * +------------------------------+---------------------+
  */
 #faux-content-wrapper{
+	// box model
 	border-bottom: 2px dashed $evergreen-neue;
 
 	@include breakpoint($gamora){
@@ -369,8 +386,11 @@ body > div + header,  // This is hacky. Use .header-nav-wrapper instead. Delete 
 	}
 
 	@include breakpoint($drax){
+		// box model
 		border-bottom-width: 0;
 		width: 66.6666666667%;  // 1/3
+		// layout
+		float: left;
 	}
 }
 
@@ -383,6 +403,8 @@ body > div + header,  // This is hacky. Use .header-nav-wrapper instead. Delete 
 	@include breakpoint($drax){
 		// box model
 		width: 33.3333333333%;  // 1/3
+		// layout
+		float: left;
 		// typography
 		@include base-type;
 	}
